--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,93 +1,126 @@
 * {
-    --bg-clr-secondary: #4db6ac;
-    --bg-clr-primary: #00796b;
+    --bg-clr-secondary: #7986cb;
+    --bg-clr-primary: #303f9f;
     --border-radius: 48px;
 
     list-style: none;
     margin: 0px;
     font-family: 'Roboto', sans-serif;
     user-select: none;
+    padding: 0px;
 }
 
-
 .container {
-    height: 90vh;
-
+    height: 100vh;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 12fr 1fr;
-
-    padding: 1rem;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 12fr;
 }
 
 .header {
     grid-row: 1/1;
-    grid-column: 1/4;
+    grid-column: 1/3;
 
     display: grid;
     grid-template-rows: 1fr;
-    grid-template-columns: 1fr 7fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     align-items: center;
 
     font-size: 1.5rem;
     background-color: var(--bg-clr-primary);
     color: white;
-    border-radius: var(--border-radius);
+
 }
 
-.header .logo {
+.header #logo {
     font-family: 'Dosis', sans-serif;
     letter-spacing: 2px;
     font-weight: bold;
+
     align-self: center;
     justify-self: center;
     grid-row: 1/1;
     grid-column: 2/3;
 }
-
 .header #menu-icon {
+    width: fit-content;
+    grid-row: 1/1;
+    grid-column: 1/1;
+    margin-left: 1rem;
+
     align-self: center;
-    padding-left: 20%;
-}
-
-.nav {
-    color: white;
-    background-color: var(--bg-clr-secondary);
-    grid-row: 3/3;
-    grid-column: 1/4;
-    border-radius: 48px;
-
-    display: grid;
-    grid-template-rows: 1fr;
-    grid-template-columns: 1fr 1fr 1fr;
-}
-
-.nav-item {
-    background-color: var(--bg-clr);
-    border-radius: var(--border-radius);
+    justify-self: self-start;
 
     display: flex;
+}
+
+#menu {
+    width: 50vw;
+    grid-column: 1/1;
+
+    background-color: var(--bg-clr-secondary);
+    opacity: 0.7;
+
+    padding: 1rem;
+    flex-direction: column;
+    gap: 16px;
+
+    color: white;
+    font-weight: bold;
+    letter-spacing: .05em;
+
+    display: none;
+}
+
+#menu.slide-forwards {
+    display: flex;
+    animation: slide 500ms linear 0s 1 normal forwards;
+}
+
+#menu.slide-backwards {
+    animation: back 500ms ease 0s 1 normal forwards;
+}
+
+#menu .page {
+    display: flex;
+    gap: 16px;
     align-items: center;
-    justify-content: center;
+
+    padding: 8px;
+    border-radius: var(--border-radius);
 }
 
-.active {
-    animation: change 300ms ease-in-out 0s 1 normal forwards;
+#menu .page.active {
+    background-color: var(--bg-clr-primary);
 }
 
-.main {
-    grid-row: 2/3;
-    grid-column: 1/4;
-    align-self: center;
-    justify-self: center;
+#menu .page .icon {
+    display: flex;
+    align-items: center;
 }
 
-@keyframes change {
+
+
+
+
+
+@keyframes slide {
     0% {
-        background-color: var(--bg-clr-secondary);
+        transform: translateX(-50vw);
     }
 
     100% {
-        background-color: var(--bg-clr-primary);
+        transform: translateX(0vw);
+    }
+}
+
+@keyframes back {
+    0% {
+       display: flex;
+    }
+
+    100% {
+        transform: translateX(-60vw);
+        display: none;
     }
 }
