--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,13 +1,16 @@
 * {
     --bg-clr-secondary: #7986cb;
     --bg-clr-primary: #303f9f;
+    /* --bg-clr-primary: #304ffe; */
     --border-radius: 48px;
+    --bg-clr-main:#e8eaf6;
 
     list-style: none;
     margin: 0px;
     font-family: 'Roboto', sans-serif;
     user-select: none;
     padding: 0px;
+    letter-spacing: .05rem;
 }
 
 .container {
@@ -57,6 +60,7 @@
 #menu {
     width: 50vw;
     grid-column: 1/1;
+    grid-row: 2/2;
 
     background-color: var(--bg-clr-secondary);
     opacity: 0.7;
@@ -99,10 +103,35 @@
     align-items: center;
 }
 
+#main{
+    grid-row: 2/3;
+    grid-column: 1/3;    
+    background-color:var(--bg-clr-main);
+}
 
+#starter{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
+#starter button{
+    padding: 1rem;
+    font-size: 1.25rem;
+    background-color: var(--bg-clr-primary);
+    color: white;
+    outline: none;
+    border: none;
+    border-radius: var(--border-radius);
+    animation: pop 2000ms ease-in-out 0s infinite normal forwards;
+}
 
-
+#starter button:active{
+    animation: none;
+    box-shadow: inset black 0px 0px 2px 2px ;
+}
 
 @keyframes slide {
     0% {
@@ -122,5 +151,14 @@
     100% {
         transform: translateX(-60vw);
         display: none;
+    }
+}
+
+@keyframes pop {
+    0%{
+        box-shadow: var(--bg-clr-secondary) 0px 0px 10px 0px;
+    }
+    100%{
+    box-shadow: var(--bg-clr-primary) 0px 0px 40px 2px;
     }
 }
