Change theme colors

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,9 +1,9 @@
 * {
-    --bg-clr-secondary: #7986cb;
-    --bg-clr-primary: #303f9f;
-    /* --bg-clr-primary: #304ffe; */
+    --bg-clr-secondary: #9575cd;
+    --bg-clr-primary: #512da8;
+  
     --border-radius: 48px;
-    --bg-clr-main:#e8eaf6;
+    --bg-clr-main:#ede7f6;
 
     list-style: none;
     margin: 0px;
