--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -11,6 +11,7 @@
     user-select: none;
     padding: 0px;
     letter-spacing: .05rem;
+    box-sizing: border-box;
 }
 
 .container {
@@ -63,7 +64,7 @@
     grid-row: 2/2;
 
     background-color: var(--bg-clr-secondary);
-    opacity: 0.7;
+    opacity: 0.9;
 
     padding: 1rem;
     flex-direction: column;
@@ -85,7 +86,7 @@
     animation: back 500ms ease 0s 1 normal forwards;
 }
 
-#menu .page {
+#menu .pageTab {
     display: flex;
     gap: 16px;
     align-items: center;
@@ -94,11 +95,11 @@
     border-radius: var(--border-radius);
 }
 
-#menu .page.active {
+#menu .pageTab.active {
     background-color: var(--bg-clr-primary);
 }
 
-#menu .page .icon {
+#menu .pageTab .icon {
     display: flex;
     align-items: center;
 }
@@ -115,6 +116,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    display: none;
 }
 
 #starter button{
@@ -133,6 +135,74 @@
     box-shadow: inset black 0px 0px 2px 2px ;
 }
 
+#subjects-page {
+    height: 100%;
+    width: 100%;
+
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    display: none;
+}
+
+#subjects-page .sub-pg-wrapper{
+    margin: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 4px;
+}
+
+#subjects-page .add{
+    width: 100%;
+    padding: 1rem;
+    background-color: white;
+    display: flex;
+    gap: 24px;
+    border-radius: 24px 24px 0px 0px;
+}
+
+#subjects-page .add button{
+    padding: 8px 16px;
+    border: none;
+    background-color: var(--bg-clr-primary);
+    color: white;
+    font-size: 1rem;
+    border-radius: var(--border-radius);
+}
+#subjects-page .add button:active{
+  background-color: var(--bg-clr-secondary);
+}
+
+#subjects-page .add input{
+    border: none;
+    border-bottom: 2px solid var(--bg-clr-secondary);
+    outline: none;
+    color: var(--bg-clr-primary);
+    font-size: 1em;
+}
+
+#subjects-page .subject-list{
+    width: 100%;
+    padding: 8px;
+     background-color: white;
+     display: flex;
+     flex-wrap: wrap;
+     gap: 16px;
+
+     border-radius: 0px 0px 24px 24px;
+    
+}
+#subjects-page .subject-list p{
+   color: grey;
+   width: 100%;
+   text-align: center;
+}
+
+
+#home-page,#extraclass-page,#schedule-page{
+    display: none;
+}
 @keyframes slide {
     0% {
         transform: translateX(-50vw);
