--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,9 +1,9 @@
 * {
     --bg-clr-secondary: #9575cd;
     --bg-clr-primary: #512da8;
-  
+
     --border-radius: 48px;
-    --bg-clr-main:#ede7f6;
+    --bg-clr-main: #ede7f6;
 
     list-style: none;
     margin: 0px;
@@ -46,6 +46,7 @@
     grid-row: 1/1;
     grid-column: 2/3;
 }
+
 .header #menu-icon {
     width: fit-content;
     grid-row: 1/1;
@@ -79,11 +80,11 @@
 
 #menu.slide-forwards {
     display: flex;
-    animation: slide 500ms linear 0s 1 normal forwards;
+    animation: slide 300ms linear 0s 1 normal forwards;
 }
 
 #menu.slide-backwards {
-    animation: back 500ms ease 0s 1 normal forwards;
+    animation: back 300ms ease 0s 1 normal forwards;
 }
 
 #menu .pageTab {
@@ -104,13 +105,13 @@
     align-items: center;
 }
 
-#main{
+#main {
     grid-row: 2/3;
-    grid-column: 1/3;    
-    background-color:var(--bg-clr-main);
+    grid-column: 1/3;
+    background-color: var(--bg-clr-main);
 }
 
-#starter{
+#starter {
     height: 100%;
     width: 100%;
     display: flex;
@@ -118,7 +119,7 @@
     justify-content: center;
 }
 
-#starter button{
+#starter button {
     padding: 1rem;
     font-size: 1.25rem;
     background-color: var(--bg-clr-primary);
@@ -129,9 +130,9 @@
     animation: pop 2000ms ease-in-out 0s infinite normal forwards;
 }
 
-#starter button:active{
+#starter button:active {
     animation: none;
-    box-shadow: inset black 0px 0px 2px 2px ;
+    box-shadow: inset black 0px 0px 2px 2px;
 }
 
 #subjects-page {
@@ -144,7 +145,7 @@
     display: none;
 }
 
-#subjects-page .sub-pg-wrapper{
+#subjects-page .sub-pg-wrapper {
     margin: 1.5rem;
     display: flex;
     flex-direction: column;
@@ -152,7 +153,7 @@
     gap: 4px;
 }
 
-#subjects-page .add{
+#subjects-page .add {
     width: 100%;
     padding: 1rem;
     background-color: white;
@@ -161,7 +162,7 @@
     border-radius: 24px 24px 0px 0px;
 }
 
-#subjects-page .add button{
+#subjects-page .add button {
     padding: 8px 16px;
     border: none;
     background-color: var(--bg-clr-primary);
@@ -169,11 +170,12 @@
     font-size: 1rem;
     border-radius: var(--border-radius);
 }
-#subjects-page .add button:active{
-  background-color: var(--bg-clr-secondary);
+
+#subjects-page .add button:active {
+    background-color: var(--bg-clr-secondary);
 }
 
-#subjects-page .add input{
+#subjects-page .add input {
     border: none;
     border-bottom: 2px solid var(--bg-clr-secondary);
     outline: none;
@@ -181,27 +183,30 @@
     font-size: 1em;
 }
 
-#subjects-page .subject-list{
+#subjects-page .subject-list {
     width: 100%;
     padding: 8px;
-     background-color: white;
-     display: flex;
-     flex-wrap: wrap;
-     gap: 16px;
+    background-color: white;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
 
-     border-radius: 0px 0px 24px 24px;
-    
-}
-#subjects-page .subject-list p{
-   color: grey;
-   width: 100%;
-   text-align: center;
+    border-radius: 0px 0px 24px 24px;
+
 }
 
+#subjects-page .subject-list p {
+    color: grey;
+    width: 100%;
+    text-align: center;
+}
 
-#home-page,#extraclass-page,#schedule-page{
+
+#extraclass-page,
+#schedule-page {
     display: none;
 }
+
 @keyframes slide {
     0% {
         transform: translateX(-50vw);
@@ -214,7 +219,7 @@
 
 @keyframes back {
     0% {
-       display: flex;
+        display: flex;
     }
 
     100% {
@@ -224,10 +229,11 @@
 }
 
 @keyframes pop {
-    0%{
+    0% {
         box-shadow: var(--bg-clr-secondary) 0px 0px 10px 0px;
     }
-    100%{
-    box-shadow: var(--bg-clr-primary) 0px 0px 40px 2px;
+
+    100% {
+        box-shadow: var(--bg-clr-primary) 0px 0px 40px 2px;
     }
 }
