--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4,6 +4,7 @@
 
     --border-radius: 48px;
     --bg-clr-main: #ede7f6;
+    --bg-clr-cmpnt: #5e35b1;
 
     list-style: none;
     margin: 0px;
@@ -75,6 +76,7 @@
     font-weight: bold;
     letter-spacing: .05em;
 
+    z-index: 2;
     display: none;
 }
 
@@ -201,9 +203,158 @@
     text-align: center;
 }
 
+#schedule-page {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#schedule-page .schedule-pg-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+
+    background-color: white;
+    margin: 1.5rem;
+    padding: 12px;
+    border-radius: 36px;
+    box-shadow: var(--bg-clr-secondary) 0px 0px 4px 1px;
+}
+
+#schedule-page .heading {
+    color: black;
+}
+
+#schedule-page .day {
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
+#schedule-page .add {
+    grid-row: 1/2;
+    grid-column: 1/2;
+
+    display: grid;
+    grid-template-columns: 3fr 1fr 1fr;
+    justify-items: center;
+    align-items: center;
+
+    background-color: var(--bg-clr-cmpnt);
+    border-radius: var(--border-radius);
+    z-index: 1;
+}
+
+#schedule-page .add button {
+    color: white;
+    font-size: 1rem;
+
+    background-color: var(--bg-clr-secondary);
+    padding: 6px 12px;
+    border: none;
+    border-radius: var(--border-radius);
+}
+
+#schedule-page .add .name {
+    justify-self: self-start;
+
+    margin: 8px;
+
+    padding: 6px;
+    color: white;
+    font-weight: bold;
+    font-size: 1rem;
+}
+
+#schedule-page .subject-list-wrapper {
+    display: none;
+}
+
+#schedule-page .dropdown {
+    grid-row: 1/3;
+    grid-column: 1/2;
+
+    display: grid;
+    grid-template-rows: 48px 1fr;
+    grid-template-columns: 1fr;
+
+    background-color: var(--bg-clr-main);
+    border-radius: 24px;
+}
+
+#schedule-page .subject-list {
+    grid-column: 1fr;
+    grid-row: 2/3;
+
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
+
+    padding: 12px;
+}
+
+/* #schedule-page .item {
+    width: 100px;
+    height: 24px;
+    border: 2px solid black;
+    border-radius: 4px;
+} */
+dialog {
+    margin: auto;
+    border: none;
+    border-radius: 24px;
+}
+
+dialog::backdrop {
+    opacity: .3;
+    background-color: gray;
+}
+
+.dialog {
+    display: grid;
+    grid-template-rows: 48px 1fr 36px;
+    gap: 16px;
+    padding: 8px;
+    margin: 8px;
+}
+
+.dialog .list {
+    align-self: center;
+    justify-self: center;
+
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
+
+    width: 80%;
+    min-height: 8pc;
+    border: 1px solid var(--bg-clr-primary);
+    border-radius: 24px;
+}
+
+.dialog button {
+    justify-self: self-end;
+
+    width: fit-content;
+    background-color: var(--bg-clr-cmpnt);
+    border: none;
+    border-radius: var(--border-radius);
+
+    padding: 6px 12px;
+    margin-right: 36px;
+
+    color: white;
+    font-size: 1rem;
+}
+
+#schedule-page .message {
+    color: grey;
+}
 
 #extraclass-page,
-#schedule-page {
+#home-page {
     display: none;
 }
 
