--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -209,6 +209,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    display: none;
 }
 
 #schedule-page .schedule-pg-wrapper {
@@ -348,8 +350,77 @@ dialog::backdrop {
     color: grey;
 }
 
-#extraclass-page,
 #home-page {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#home-page .home-pg-wrapper {
+    padding: 1rem;
+    border: 2px solid black;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 10fr 1fr 1fr;
+    gap: 8px;
+}
+#home-page .heading{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#home-page .content {
+    /* border: 2px solid black; */
+    grid-row: 1/2;
+    grid-column: 1/2;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+    padding: 8px;
+}
+#home-page .subjects-wrapper{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+
+}
+#home-page .nav {
+    grid-row: 2/3;
+    grid-column: 1/2;
+   
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+
+    background-color: var(--bg-clr-secondary);
+    border-radius: var(--border-radius);
+
+    color: white;
+    font-size: 1.25rem;
+}
+.nav-item{
+    width: 100%;
+    height: 100%;
+    border-radius: var(--border-radius);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#home-page .current{
+    background-color: var(--bg-clr-cmpnt);
+}
+
+
+#extraclass-page {
     display: none;
 }
 
