--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -356,6 +356,7 @@ dialog::backdrop {
     display: flex;
     align-items: center;
     justify-content: center;
+    display: none;
 }
 
 #home-page .home-pg-wrapper {
