--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -425,7 +425,61 @@ dialog::backdrop {
     background-color: var(--bg-clr-cmpnt);
 }
 
+#home-page .today{
+    display: none;
+}
+#home-page .report{
+    display: flex;
+}
+#home-page .report-container{
+    width:100%;
+    height: 100%;
+    display: grid;
+    grid-template-rows: 48px 1fr;
+    gap: 24px;
+}
+#home-page .table-header{
+    border-radius: var(--border-radius);
+    background-color: var(--bg-clr-cmpnt);
+    color: white;
+    font-weight: bold;
+}
+#home-page .table-content{
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+#home-page .table-content>.table-row {
+    border: 2px solid var();
+    background-color: white;
 
+}
+
+#home-page .table-content>.table-row>.cell {
+    border-right: 1px solid var(--bg-clr-main);
+}
+
+#home-page .table-content>.table-row>.cell:nth-child(4n) {
+    border-right: none;
+}
+
+#home-page .table-row{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    border-radius: var(--border-radius);
+}
+
+#home-page .cell{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 8px;
+    border-right:1px solid var(--bg-clr-main) ;
+    min-width: 5pc;
+}
+#home-page .cell:nth-of-type(4){
+    border-right: none;
+}
 #extraclass-page {
     display: none;
 }
