--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -152,7 +152,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 4px;
+    gap: 16px;
 }
 
 #subjects-page .add {
@@ -203,6 +203,13 @@
     text-align: center;
 }
 
+#subjects-page .message{
+    color: gray;
+}
+
+#subjects-page #link{
+    color: var(--bg-clr-cmpnt);
+}
 #schedule-page {
     width: 100%;
     height: 100%;
